--- a/funingo-main/package.json
+++ b/funingo-main/package.json
@@ -18,11 +18,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "chart.js": "^4.4.0",
+    "dotenv": "^16.4.5",
     "formik": "^2.4.3",
     "gsap": "^3.12.2",
     "html2canvas": "^1.4.1",
     "moment": "^2.29.4",
     "mui-one-time-password-input": "^2.0.0",
+    "nodemon": "^3.1.0",
     "razorpay": "^2.9.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -31,6 +33,8 @@
     "react-icons": "^4.10.1",
     "react-otp-input": "^3.0.4",
     "react-redux": "^8.1.2",
+    "react-refresh": "^0.14.2",
+    "react-refresh-webpack-plugin": "^0.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
