--- a/funingo-server-main/package.json
+++ b/funingo-server-main/package.json
@@ -17,9 +17,10 @@
     "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "hmac": "^1.0.1",
     "jsonwebtoken": "^9.0.1",
+    "mongodb": "^6.6.2",
     "mongoose": "^7.4.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
